--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -27,4 +27,4 @@ jobs:
 
           nix develop ./test#overmind --command 'run-ci'
           nix develop ./test#overmind-dft --command 'run-ci'
-          nix develop ./test#prox --command 'run-ci'
+          nix develop ./test#honcho --command 'run-ci'
